# smallDataVisualisationExample

./: CMakeLists.txt  Main.qml  dataprovider.cpp  dataprovider.h  main.cpp
